Sat Dec 27 10:11:21 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/tk/lib/tkextlib/tcllib/plotchart.rb: fix to invoke correct function
	  of tcllib. Patch by @zalt50 [fix GH-787]

Sat Dec 27 10:03:41 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/make-snapshot: show sha1 digest when making packages.
	  it's request from https://github.com/ruby/www.ruby-lang.org/issues/921
	  [fix GH-794]

Fri Dec 26 15:32:16 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (ip_invoke_core): remove probably duplicate
	  dead code.

Fri Dec 26 15:28:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (ip_ruby_cmd_receiver_const_get): simply use
	  rb_path2class() to get a class/module from its name.

Fri Dec 26 15:20:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_long): append at once by w_nbyte() instead of
	  appending byte by byte.

Fri Dec 26 15:13:13 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/parser/parser.rl (unescape_unicode): check if valid
	  before bit-or assignments.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* ext/nkf/nkf-utf8/nkf.c (nkf_iconv_t): fix a missing semicolon.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* process.c (rb_spawn_process): get rid of usage of uninitialized
	  variable.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* regexec.c (match_at): ditto.

	* ext/win32ole/win32ole.c (ole_wc2mb_alloc, ole_vstr2wc, ole_mb2wc):
	  ditto.

	* dir.c (ruby_glob0): no need to check never-NULL pointer.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* win32/file.c (rb_file_expand_path_internal): ditto.

	* win32/file.c (code_page_i): handle realloc failure.
	  reported by Denis Denisov <denji0k AT gmail.com>.

	* win32/stub.c (stub_sysinit): ditto.

	* fix printf format conversion specifiers.
	  reported by Denis Denisov <denji0k AT gmail.com>.

Fri Dec 26 01:41:40 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
